--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
 <div class="container">
   <div class="content">
      <img src="https://scontent-mrs2-1.xx.fbcdn.net/v/t1.6435-9/162192501_128602949267015_7771244500521872669_n.png?_nc_cat=111&ccb=1-7&_nc_sid=e3f864&_nc_ohc=7APMikL5pqoAX9we17F&_nc_ht=scontent-mrs2-1.xx&oh=00_AT_Zj6zroUbHartjUXvEoT9B6g0uYVHTJw_rAfhpcaRXcw&oe=632CB384" class="animated fadeInDown" />
@@ -8,3 +15,6 @@
 	<a class="animated fadeInUp" href="https://www.youtube.com/channel/UCGaAP0gTYnG_SFujt6BZBfg target="_top">Youtube</a>
   </div>
 </div>
+
+</body>
+</html>
